# lib-ledger-core

./: CHANGELOG.md  appveyor.yml  run_reorg_scenario.sh
core/: core.djinni
core/idl/: networks.djinni
core/idl/cosmos/: addresses.djinni
core/idl/database/: database.djinni
core/idl/wallet/: configuration.djinni
core/src/: CMakeLists.txt
core/src/api/: Account.hpp  BlockchainExplorerEngines.cpp  BlockchainExplorerEngines.hpp  ConfigurationDefaults.hpp  CosmosConfigurationDefaults.cpp  CosmosLikeAmount.hpp  CosmosLikeContent.hpp  CosmosLikeMessage.hpp  CosmosLikeMsgDelegate.hpp  CosmosLikeMsgDeposit.hpp  CosmosLikeMsgRedelegate.hpp  CosmosLikeMsgSend.hpp  CosmosLikeMsgSubmitProposal.hpp  CosmosLikeMsgType.cpp  CosmosLikeMsgType.hpp  CosmosLikeMsgUndelegate.hpp  CosmosLikeMsgVote.hpp  CosmosLikeMsgWithdrawDelegationReward.hpp  CosmosLikeNetworkParameters.hpp  CosmosLikeOperation.hpp  CosmosLikeTransaction.hpp  CosmosLikeTransactionBuilder.hpp
core/src/bytes/: BytesWriter.h
core/src/collections/: DynamicArray.cpp  DynamicArray.hpp  DynamicObject.cpp  DynamicObject.hpp  vector.hpp
core/src/common/: CommonAccountBasedKeychain.h
core/src/config/: Networks.cpp  Networks.hpp
core/src/cosmos/: CosmosLikeAddress.cpp  CosmosLikeAddress.h  CosmosLikeExtendedPublicKey.cpp  CosmosLikeExtendedPublicKey.h
core/src/crypto/: HMAC.cpp
core/src/database/: DatabaseSessionPool.hpp  SQLite3Backend.cpp  migrations.cpp  migrations.hpp
core/test/: CMakeLists.txt
core/test/cosmos/: CMakeLists.txt  CosmosBech32.h  address_test.cpp  main.cpp  transactions_test.cpp
(+180 files in other folders)
